--- a/originalAppTest1/Info.plist
+++ b/originalAppTest1/Info.plist
@@ -44,5 +44,21 @@
 	</dict>
 	<key>UIBackgroundModes</key>
 	<array/>
+	<key>UILaunchScreens</key>
+	<dict>
+		<key>UIDefaultLaunchScreen</key>
+		<string></string>
+		<key>UILaunchScreenDefinitions</key>
+		<array>
+			<dict>
+				<key>UIImageName</key>
+				<string></string>
+				<key>UILaunchScreenIdentifier</key>
+				<string></string>
+			</dict>
+		</array>
+		<key>UIURLToLaunchScreenAssociations</key>
+		<dict/>
+	</dict>
 </dict>
 </plist>
